# itu-ders-secici

./: .gitignore  Justfile  Makefile  README.md  pyproject.toml  quickstart.bat  quickstart.sh  requirements.txt
src/: driver_manager.py  logger.py  request_manager.py  run.py  setup.py  token_fetcher.py
tests/: test_request_manager.py
