[project]
name = "itu-ders-secici"
version = "2026.2.3"
description = "İTÜ OBS (Kepler) üzerinden zamanlayıcılı ders seçim uygulaması."
authors = [
    {"name" = "Ata Türkoğlu", email = "ata@espalestudios.com"},
    {"name" = "AHumNTR"},
    {"name" = "Ulvin", email = "ulvin.oguzlu@gmail.com"},
    {"name" = "NandeMD"}
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "blinker==1.7.0",
    "requests==2.27.1",
    "selenium==4.24.0",
    "selenium-wire==5.1.0",
    "setuptools==70.0.0",
    "webdriver-manager==4.0.2",
]

[project.urls]
Homepage = "https://github.com/AtaTrkgl/itu-ders-secici"
Repository = "https://github.com/AtaTrkgl/itu-ders-secici"
Documentation = "https://github.com/AtaTrkgl/itu-ders-secici/blob/main/README.md"
Issues = "https://github.com/AtaTrkgl/itu-ders-secici/issues"